{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "227cffb4-b4f7-4974-bff9-1d3cbcc653aa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "79b5b0ba-fff1-4914-84ae-4011265847e2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2ef74d21-ee8d-4316-ae4e-ff71e3662cae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3d181d7-5996-4aba-9589-24da45ee851b",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "711c4ea1-ac68-4b5f-9ce2-a4ef76b2721f",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6ba012ea-d030-41de-8e89-8184707e9b5b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "974785fb-2e56-4661-ad18-64a4c5e689cc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menue",
            "id": "56d15069-1a3c-415e-ac0d-857d5fad5534",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "912e57c4-4c5b-4b27-9491-ebf7466d870f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ccf50bd1-fb21-4842-9c92-9b21de167a45",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}